[package]
name = "pareto_front"
version = "0.2.0"
edition = "2021"
authors = ["Nestor Demeure"]

# description of the crate
# see https://doc.rust-lang.org/cargo/reference/manifest.html#package-metadata
description = "Builds a Pareto front incrementaly."
repository = "https://github.com/nestordemeure/paretoFront"
documentation = "https://docs.rs/pareto_front"
readme = "README.md"
keywords = ["pareto", "front", "multi-objective", "optimization"]
categories = ["algorithms", "data-structures"] # crates.io/category_slugs
license = "Apache-2.0"

[features]
pareto_front_serde = ["serde"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
thread_local = "1.1.3"
rayon = "1.5.1"

[dev-dependencies]
criterion = {version="0.3.5", features=["html_reports"]}
rand = "0.8.4"
rand_distr = "0.4.2"
rayon = "1.5.1"

[[bench]]
name = "push"
harness = false

[[bench]]
name = "push_concurrent"
harness = false
