[package]
name = "pareto_front"
version = "1.0.0"
edition = "2021"
authors = ["Nestor Demeure"]

# description of the crate
# see https://doc.rust-lang.org/cargo/reference/manifest.html#package-metadata
description = "Builds a Pareto front incrementaly."
repository = "https://github.com/nestordemeure/paretoFront"
documentation = "https://docs.rs/pareto_front"
readme = "README.md"
keywords = ["pareto", "front", "multi-objective", "optimization"]
categories = ["algorithms", "data-structures"] # crates.io/category_slugs
license = "Apache-2.0"

[features]
pareto_front_serde = ["serde"]
pareto_front_concurrent = ["thread_local"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
thread_local = { version = "1.1.3", optional = true }

[dev-dependencies]
criterion = {version="0.3.5", features=["html_reports"]}
rand = "0.8.4"
rand_distr = "0.4.2"
rayon = "1.5.1"

[[bench]]
name = "push"
harness = false

[[bench]]
name = "merge"
harness = false

[[bench]]
name = "extend"
harness = false

[[bench]]
name = "push_concurrent"
harness = false

[package.metadata.docs.rs]
all-features = true # displays all features in the doc
